# monopoly

./: Cargo.toml
res/: chance.json  cities.json  community_chest.json  other_cells.json  stations.json  utilities.json
src/: game.rs  http.rs  main.rs  rng.rs
