[package]
name = "monopoly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
fastrand = "2.1.0"
serde = { version = "1.0.203", features = ["derive", "rc"] }
serde_json = "1.0.120"
tokio = "1.38.0"
